--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <div id="app">If you see this then something is wrong or loading.</div>
+        <div id="app">If you see this then something is wrong or is loading.</div>
     </body>
 
 </html>
