--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Léo et Léa</title>
+        <link rel="stylesheet" href="../styles/style.css">
     </head>
 
     <body>
