--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,10 @@
     </head>
 
     <body>
+        <div class="popin" style="display: none;">
+            <div class="message">
+            </div>
+        </div>
         <div id="app">If you see this then something is wrong or is loading.</div>
     </body>
 
