--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html> <html> <head> <meta charset=utf-8 /> <meta name=viewport content="width=device-width,user-scalable=no"> <title>Léo et Léa</title> <link rel=stylesheet href=static/styles/style.css> </head> <body> <div id=app>Come play with LEO !</div> <script type="text/javascript" src="static/js/manifest.fed8833cec46424b5aea.js"></script><script type="text/javascript" src="static/js/vendor.8d8c46308b9e793b9a49.js"></script><script type="text/javascript" src="static/js/client.d9eb1fd35b286109a219.js"></script></body> </html> 
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>Léo et Léa</title>
+        <link rel="stylesheet" href="static/styles/style.css">
+    </head>
+
+    <body>
+        <div id="app">Come play with LEO !</div>
+    <script type="text/javascript" src="static/js/commons.js"></script><script type="text/javascript" src="static/js/client.js"></script></body>
+
+</html>
