--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, user-scalable=no">
-        <title>Léo et Léa</title>
-        <link rel="stylesheet" href="static/styles/style.css">
-    </head>
-
-    <body>
-        <div id="app">Come play with LEO !</div>
-    <script type="text/javascript" src="static/js/commons.js"></script><script type="text/javascript" src="static/js/client.js"></script></body>
-
-</html>
+<!DOCTYPE html> <html> <head> <meta charset=utf-8 /> <meta name=viewport content="width=device-width,user-scalable=no"> <title>Léo et Léa</title> <link rel=stylesheet href=static/styles/style.css> </head> <body> <div id=app>Come play with LEO !</div> <script type="text/javascript" src="static/js/vendor.fe902798a4e141ea662f.js"></script><script type="text/javascript" src="static/js/client.b479d5b82fec601eb972.js"></script></body> </html> 
